objects/Demo_Request_Contact_Junction__c.object
<CustomObject>
    <description>What it does?  Object connecting a contact to a DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>What it does?  Holds the type of contact associated with the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What it does?  Holds name of contact associated with the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demo Request Contact Junctions</relationshipLabel>
        <relationshipName>Demo_Request_Contact_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <description>What it does?  Holds a link to the DR associated with the contact.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Demo Request</label>
        <referenceTo>Demo_Request__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Demo_Request_Contact_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>What it Does?  Holds notes about this contact relating to the linked event.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <inlineHelpText>Notes about this contact relating to the linked event</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SignedUpBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does?  Holds a contact lookup to who signed up the registrant.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>SignedUpBy</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demo Request Contact Junctions (SignedUpBy)</relationshipLabel>
        <relationshipName>Demo_Request_Contact_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Shows whether the contact attended training.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Training Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <description>What it Does? Holds the date of contact&apos;s training. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deregisteredTimestampe__c</fullName>
        <description>What it Does?  A timestamp of when the last deregistration happened.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>deregisteredTimestampe</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>deregistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does?  A flag for a contact that registered and then deregistered. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>deregistered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>registerTimestamp__c</fullName>
        <description>What it Does? A timestamp of when this registration took place. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>registerTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>registered__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What it Does?  A flag that the contact has registered for a training.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>registered</label>
        <type>Checkbox</type>
    </fields>
    <label>Demo Request Contact Junction</label>
    <nameField>
        <displayFormat>DRC-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Demo Request Contact Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Request Contact Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>